<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/APP_NAME"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtitle"
        style="@style/EstiloTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TITLE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIV" />

    <EditText
        android:id="@+id/ETName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/HINT_NAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtitle" />

    <CheckBox
        android:id="@+id/CBBacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Bacon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ETName" />

    <CheckBox
        android:id="@+id/CBQueijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Queijo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CBBacon" />

    <CheckBox
        android:id="@+id/CBOnionRings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Onion Rings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CBQueijo" />

    <TextView
        android:id="@+id/tvQuantity"
        style="@style/EstiloTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="QUANTIDADE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CBOnionRings" />

    <LinearLayout
        android:id="@+id/LLquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuantity">

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DECREMENT" />

        <TextView
            android:id="@+id/tvItemQuantity"
            style="@style/EstiloTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/QUANTITY" />

        <Button
            android:id="@+id/button_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INCREMENT" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvOrderOverview"
        style="@style/EstiloTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ORDER_OVERVIEW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLquantity" />

    <TextView
        android:id="@+id/tvTotalPrice"
        style="@style/EstiloTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ORDER_AMOUNT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrderOverview" />

    <Button
        android:id="@+id/ButtonFinishOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/MAKE_ORDER"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>